--- a/index.html
+++ b/index.html
@@ -6,16 +6,123 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fremwork</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="12BoolFlex.css">
 </head>
 <body>
-    <section class="container">
+    <div class="container-fluid">
+        <h2><strong>Esercizio per Casa</strong></h2>
         <div class="row">
-            <div class="col-12">
-                <h1>qwertyhujkixzcvbnm</h1>
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
             </div>
-
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
+            </div>
         </div>
-    </section>
-    
+        <div class="row">
+            <div class="col-xs-2">
+                <div class="box">col</div>
+            </div>
+            <div class="col-xs-5">
+                <div class="box">col</div>
+            </div>
+            <div class="col-xs-5">
+                <div class="box">col</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="box">12 col</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-8">
+                <div class="box">8 col</div>
+            </div>
+            <div class="col-xs-2">
+                <div class="box">2 col</div>
+            </div>
+            <div class="col-xs-2">
+                <div class="box">2 col</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col-xs-2">
+                <div class="box">2 col</div>
+            </div>
+            <div class="col-xs-2">
+                <div class="box">2 col</div>
+            </div>
+            <div class="col-xs-6">
+                <div class="box">6 col</div>
+            </div>
+            <div class="col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <div class="box">
+                    <div class="row">
+                        <div class="col-xs-2">
+                            <div class="green">Nested 2 col</div>
+                        </div>
+                        <div class="col-xs-2">
+                            <div class="green">Nested 2 col</div>
+                        </div>
+                        <div class="col-xs-8">
+                            <div class="green">Nested 8 col</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <div class="box">
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <div class="green">Nested 6 col</div>
+                        </div>
+                        <div class="col-xs-6">
+                            <div class="green">Nested 6 col</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
