--- a/index.html
+++ b/index.html
@@ -122,6 +122,60 @@
                 </div>
             </div>
         </div>
+        <hr>
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="box"></div>
+            </div>
+        </div>   
+        <div class="row">
+            <div class="col-xs-1">
+                <div class="box"></div>
+            </div>
+            <div class="col-xs-11">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-2">
+                <div class="box"></div>
+            </div>
+            <div class="col-xs-10">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-3">
+                <div class="box"></div>
+            </div>
+            <div class="col-xs-9">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-4">
+                <div class="box"></div>
+            </div>
+            <div class="col-xs-8">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-5">
+                <div class="box"></div>
+            </div>
+            <div class="col-xs-7">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <div class="box"></div>
+            </div>
+            <div class="col-xs-6">
+                <div class="box"></div>
+            </div>
+        </div> 
     </div>
 
 </body>
